# unmanaged-agent

./: README.md
SDKs/python-sdk/: README.md  pyproject.toml
SDKs/python-sdk/src/unmanaged_agent/: __init__.py  client.py  models.py
SDKs/python-sdk/tests/: test_client.py
SDKs/typescript-sdk/: README.md  package-lock.json  package.json  tsconfig.json
SDKs/typescript-sdk/src/: client.ts  index.ts  types.ts
SDKs/typescript-sdk/tests/: client.test.ts
api-server/: .env.example  .gitignore  Dockerfile  README.md  database.py  main.py  models.py  pyproject.toml
api-server/routers/: agents.py  environments.py  sessions.py
api-server/services/: agent_runtime.py  sandbox.py
api-server/tests/: conftest.py  test_agents.py  test_environments.py
