[project]
name = "unmanaged-agent"
version = "0.1.0"
description = "Open sourced agent infra"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "aiosqlite>=0.21.0",
    "sse-starlette>=2.2.0",
    "e2b>=1.3.0",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-anyio>=0.0.0",
]
