[project]
name = "unmanaged-agent"
version = "0.1.1"
description = "Python SDK for the Unmanaged Agent API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.0",
]

[project.urls]
Homepage = "https://github.com/jinxi97/unmanaged-agent"
Repository = "https://github.com/jinxi97/unmanaged-agent"
Issues = "https://github.com/jinxi97/unmanaged-agent/issues"

[dependency-groups]
dev = [
    "build>=1.4.3",
    "pytest>=9.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-httpx>=0.36.2",
    "twine>=6.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unmanaged_agent"]
